--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto": "^0.0.3",
     "express": "^4.12.4",
     "express-mysql-session": "^0.4.3",
+    "express-session": "^1.12.1",
     "express-validator": "^2.10.0",
     "knex": "^0.8.6",
     "mysql": "^2.6.2",
