增加oauth2 认证插件

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-validator": "^2.10.0",
     "knex": "^0.8.6",
     "mysql": "^2.6.2",
+    "oauth2-server": "^2.4.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "serve-static": "^1.9.3",
