--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "async": "^1.0.0",
+    "bluebird": "^3.1.1",
     "body-parser": "^1.12.4",
     "bookshelf": "^0.8.1",
     "connect-flash": "^0.1.1",
