--- a/package.json
+++ b/package.json
@@ -34,6 +34,12 @@
     "view-helpers": "^0.1.5"
   },
   "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-less": "^3.0.5",
+    "gulp-minify-css": "^1.2.2",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-uglify": "^1.5.1",
     "nodemon": "latest"
   }
 }
