--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gulp-minify-css": "^1.2.2",
     "gulp-nodemon": "^2.0.4",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-swig": "^0.8.0",
     "gulp-uglify": "^1.5.1",
     "nodemon": "latest"
   }
